fix: newsletter two spacing issue

--- a/src/scss/layout/_newsletter.scss
+++ b/src/scss/layout/_newsletter.scss
@@ -90,9 +90,9 @@
   }
 
   &--two {
-    padding-left: 60px;
-    padding-right: 60px;
-
+    // padding-left: 60px;
+    // padding-right: 60px;
+    padding: 60px 60px;
     .newsletter {
       &__leftcontent {
         display: flex;
